cmake_minimum_required(VERSION 3.25)
project(AoC2023)

set(CMAKE_CXX_STANDARD 23)

add_executable(AoC2023 template.cpp)
add_executable(1.1 Day1.1.cpp)
add_executable(1.2 Day1.2.cpp)
add_executable(2.1 Day2.1.cpp)
add_executable(2.2 Day2.2.cpp)
add_executable(3.1 Day3.1.cpp)
add_executable(3.2 Day3.2.cpp)
add_executable(4.1 Day4.1.cpp)
add_executable(4.2 Day4.2.cpp)
add_executable(5.1 Day5.1.cpp)
add_executable(5.2 Day5.2.cpp)
add_executable(6.1 Day6.1.cpp)
add_executable(7.1 Day7.1.cpp)
add_executable(7.2 Day7.2.cpp)
add_executable(8.1 Day8.1.cpp)
add_executable(8.2 Day8.2.cpp)
add_executable(9.1 Day9.1.cpp)