cmake_minimum_required(VERSION 3.25)
project(AoC2023)

set(CMAKE_CXX_STANDARD 23)

add_executable(AoC2023 template.cpp)
add_executable(1.1 Day1.1.cpp)
add_executable(1.2 Day1.2.cpp)
add_executable(2.1 Day2.1.cpp)
add_executable(2.2 Day2.2.cpp)
add_executable(3.1 Day3.1.cpp)
add_executable(3.2 Day3.2.cpp)
add_executable(4.1 Day4.1.cpp)
add_executable(4.2 Day4.2.cpp)
add_executable(5.1 Day5.1.cpp)
add_executable(5.2 Day5.2.cpp)
add_executable(6.1 Day6.1.cpp)
add_executable(7.1 Day7.1.cpp)
add_executable(7.2 Day7.2.cpp)
add_executable(8.1 Day8.1.cpp)
add_executable(8.2 Day8.2.cpp)
add_executable(9.1 Day9.1.cpp)
add_executable(10.1 Day10.1.cpp)
add_executable(10.2 Day10.2.cpp)
add_executable(11.1 Day11.1.cpp)
add_executable(11.2 Day11.2.cpp)
add_executable(12.1 Day12.1.cpp)
add_executable(12.2 Day12.2.cpp)
add_executable(13.1 Day13.1.cpp)
add_executable(13.2 Day13.2.cpp)
add_executable(14.1 Day14.1.cpp)
add_executable(14.2 Day14.2.cpp)
add_executable(15.1 Day15.1.cpp)
add_executable(15.2 Day15.2.cpp)
add_executable(16.1 Day16.1.cpp)
add_executable(16.2 Day16.2.cpp)
add_executable(17.1 Day17.1.cpp)
add_executable(17.2 Day17.2.cpp)

